package se.lexicon.application;

import se.lexicon.ui.SystemUI;

public class Main {

    public static void main(String[] args) {

        SystemUI ui = new SystemUI();
        ui.start();

    }
}
