package se.lexicon.model;

public enum TicketType {
	ECONOMY,BUSINESS
}
