package utilities;

public enum GenderType {
	Male,Femal,Unknow;

}
